# mem-world

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
backend/: pyproject.toml
backend/src/memworld/: config.py  db.py  embeddings.py  layout.py  main.py  vault.py  world.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: api.ts  cards.ts  clusters.ts  controls.ts  globe.ts  main.ts  minimap.ts  scene.ts  styles.css  ui.ts
scripts/: fetch_wikipedia_vital.py
