[project]
name = "memworld"
version = "0.1.0"
description = "mem-world backend: vault ingest, local embeddings, spherical layout, API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5.7",
    "scipy>=1.11",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "pypdf>=4.0",
    "python-frontmatter>=1.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memworld"]
